--- a/skeleton/02-notifications.html
+++ b/skeleton/02-notifications.html
@@ -18,7 +18,22 @@
       </h1>
 
       <ul class="header-list">
-        <li><a href="#">Notifications</a></li>
+        <li>
+          <a href="#">Notifications
+            <strong class="badge">3</strong>
+          </a>
+          <ul class="dropdown">
+            <li>
+              blahblah
+            </li>
+            <li>
+              blahblah
+            </li>
+            <li>
+              blahblah
+            </li>
+          </ul>
+        </li>
         <li><a href="#">Profile</a></li>
         <li><a href="#">Settings</a></li>
       </ul>
